Bug 258304 - function assume previus value
Summary: function assume previus value
Status: RESOLVED FIXED
Alias: None
Product: kalgebra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-29 20:34 UTC by Diego Candido
Modified: 2010-12-14 05:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Diego Candido 2010-11-29 20:34:55 UTC
Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

Let's say we have the following function:

f:=x->piecewise {x>10 ? f(x+1), ? x}

if i'll rewrite it, it will be evaluated as:

x->piecewise { x>10 ? (x->piecewise { x>10 ? f(x+1), ? x })(x+1), ? x }

so f(x+1) will be evaluated and exchanged with his definition

Reproducible: Always


Actual Results:  
Function is exchanged with its previous definition

Expected Results:  
Function must not be exchanged for its definition
Comment 1 Aleix Pol 2010-12-14 05:37:01 UTC
SVN commit 1206278 by apol:

Forget about the older value of the variable before defining the new one.

BUG: 258304


 M  +1 -0      analyzer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206278