Forget about the older value of the variable before defining the new one.

BUG: 258304

svn path=/trunk/KDE/kdeedu/kalgebra/; revision=1206278